# automated_driving_msgs

./: .travis.yml  CMakeLists.txt  CODEOWNERS  LICENSE.md  README.md  package.xml
msg/: AdditionalHeaderForCommunication.msg  BasicSafetyMessage.msg  ClassWithProbability.msg  DeltaPoseWithDeltaTime.msg  DeltaTrajectory.msg  MotionPrediction.msg  MotionState.msg  ObjectClassification.msg  ObjectState.msg  ObjectStateArray.msg  StampedFloat64.msg  Trajectory.msg
